infra/k8s/apigateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sps-ingress
  namespace: sps-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:

          - path: /auth(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 4001

          - path: /parking(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: parking-service
                port:
                  number: 4002

          - path: /booking(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: booking-service
                port:
                  number: 4003

          - path: /payment(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 4004

          - path: /notification(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 4006
